# CraccTracc

./: .gitignore  CODE-REVIEW-FIXES.md  PHASE1-COMPLETION-SUMMARY.md  PHASE2-COMPLETION-SUMMARY.md  PHASE3-COMPLETION-SUMMARY.md  PHASE4-COMPLETION-SUMMARY.md  PHASE5-COMPLETION-SUMMARY.md  PHASE6-COMPLETION-SUMMARY.md  PHASE6-STATUS-UPDATE.md  PHASE7-COMPLETION-SUMMARY.md  PHASE7-STATUS-UPDATE.md  README-implementation-guide.md  README.md  cracctracc-nextjs-implementation-plan.md  cracctracc-nextjs-porting-analysis.md  cracctracc-phase-6-8-plan.md  cracctracc.py  pyproject.toml  requirements.txt
MATLAB/: manoeuvre.m  smooth.m
MATLAB/data/: activity_7737592803-metrics.csv  activity_7759942523-metrics.csv
cracctracc/: __init__.py  __main__.py  cracctracc.py  man_test.py
cracctracc-web/: drizzle.config.ts  jest.config.js  jest.config.ts  jest.setup.ts  package-lock.json  package.json
cracctracc-web/app/: layout.tsx  page.tsx
cracctracc-web/components/: ClientLoginForm.tsx  Dashboard.tsx
cracctracc-web/drizzle/: 0000_glossy_swarm.sql
cracctracc/common/: cracclog.py  data_types.py
cracctracc/data/: activity_7723252108.gpx
cracctracc/modules/: gpx_parser.py  wind.py  (+4 more)
data/: Sutech-Atlas2 10-21-2023.vkx  Sutech-Atlas2 10-28-2023.vkx  activity_3427215863.gpx  activity_3427215863.pkl  activity_4405529976.gpx  activity_7737592803.gpx  activity_7759942523.gpx  suuntoapp-Sailing-2021-10-27T05-53-04Z-track.gpx  suuntoapp-Sailing-2021-10-30T03-01-58Z-track.gpx  suuntoapp-Sailing-2021-11-03T06-11-38Z-track.gpx
tests/: test_cracctracc.py  test_parsers.py  test_wind.py
(+56 files in other folders)
