[tool.poetry]
name = "CraccTracc"
version = "0.1.0"
description = "VMG Visualiser for Sail Boats using GPX Data"
authors = ["James Lawira-Fernandez <jameslf9594@gmail.com>, Felix Daverio <felixdaverio99@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/FDbomb/CraccTracc"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.3.4"
geographiclib = "1.52"
matplotlib = "3.4.3"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
#run = "cracctracc:main"
#cracctracc = "cracctracc"
